<resources>
    <string name="app_name">MDAMEVA</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="signin">Inicio de Sesión</string>
    <string name="donthaveAccount">No tienes cuenta!,</string>
    <string name="createhere"> CREA UNA AQUI</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="numControl">Numero de Control</string>
    <string name="nameTeacher">Nombre del Maestro</string>
    <string name="correo">Correo Electronico</string>
    <string name="confPassword">Confirmar Contraseña</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="listen">Lecciones</string>
    <string name="test">Examenes</string>
    <string name="document">Documentos</string>
    <string name="method">Metodo AVE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
